fixed margins on mobile and the button a bit

--- a/src/App.scss
+++ b/src/App.scss
@@ -59,10 +59,12 @@
 }
 
 .jumboTron {
-  @media only screen and (max-width: 400px) {
-    padding: 2.5rem 2.5rem;
+  @media only screen and (max-width: 500px) {
+    padding: 2.5rem 1rem;
+    margin: 1.5em 3em;
   }
 
+  margin: 2em 5m;
   color: #37ff14e8 !important;
   background-color: #343a40 !important;
   // border-radius: 5%;
@@ -81,13 +83,13 @@
 }
 .cta-btn {
   box-shadow: 0px 10px 14px -7px #3e7327;
-  background: linear-gradient(to bottom, #8391a0 15%, #030f01 100%);
+  background: linear-gradient(to bottom, #6e7a86 15%, #030f01 100%);
 
   border-radius: 4px;
   border: 0px solid #4b8f29;
   display: inline-block;
   cursor: pointer;
-  color: #a2ff92;
+  color: #8bff76;
   font-size: 20px;
   font-weight: bold;
   padding: 6px 12px;
